--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1> This is Jack's pretend project </h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>HW</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <nav class="navbar">
+        <ul class>
+            <li>
+            <a href="#">Plots</a>
+            </li>
+            <li>
+            <a href="#">Comparison</a>
+            </li>
+            <li>
+            <a href="#">Data</a>
+            </li>
+        </ul>
+        </nav>
+            <h1 class="welcome">Welcome</h1>
+
+    </div>
+
+        <div style="width: 100%;">
+            <div style="width: 40%; margin-left: 10%; height: 100px; float: left; background: whitesmoke; height: 400px;"> 
+                <h1 style="color:teal;">Welcome</h1>
+            </div>
+            <div style="margin-left: 60%; margin-right: 10%; height: 100px; background: whitesmoke; height: 300px;"> 
+                Right Div
+            </div>
+        </div>
+  
+</body>
+
+</html>
