Jack 8:11PM push

--- a/Index2.html
+++ b/Index2.html
@@ -22,7 +22,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Plots
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
                                 <a class="dropdown-item" href="humidity.html">Humidity</a>
                                 <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
