--- a/maxtemp.html
+++ b/maxtemp.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>maxtemp</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="styles2.css">
 </head>
@@ -19,7 +20,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Plots
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="maxtemp.html">Max Temperature</a>
                         <a class="dropdown-item" href="humidity.html">Humidity</a>
                         <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
@@ -30,7 +31,7 @@
                     <a class="nav-link" href="Comparison.html">Comparison <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Data</a>
+                    <a class="nav-link" href="data.html">Data</a>
                 </li>           
         </ul>
     </div>
